--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72",
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "@types/node": "^25.0.0",
     "tailwindcss": "^4.1.14",
     "typescript": "^5.9.3"
   }
